--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "country-state-city": "^3.2.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
+    "formidable": "^3.5.1",
     "jose": "^5.6.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "next": "14.2.4",
+    "next-cloudinary": "^6.10.0",
     "next-themes": "^0.3.0",
     "qrcode.react": "^3.1.0",
     "react": "^18",
