--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "country-state-city": "^3.2.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.1.8",
     "formidable": "^3.5.1",
     "jose": "^5.6.3",
     "multer": "^1.4.5-lts.1",
