--- a/package.json
+++ b/package.json
@@ -32,11 +32,10 @@
     "cloudinary": "^2.4.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "country-state-city": "^3.2.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.1.8",
-    "formidable": "^3.5.1",
+    "embla-carousel-autoplay": "^8.2.0",
+    "embla-carousel-react": "^8.2.0",
     "jose": "^5.6.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
@@ -45,25 +44,22 @@
     "next-themes": "^0.3.0",
     "qrcode.react": "^3.1.0",
     "react": "^18",
-    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
-    "react-phone-input-2": "^2.15.1",
-    "react-tabs": "^6.0.2",
     "sequelize": "^6.37.3",
     "sharp": "^0.33.4",
-    "swiper": "^11.1.4",
+    "swiper": "^11.1.10",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.0.0",
     "daisyui": "^4.12.2",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "^0.2.4",
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
