--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint", "jsx-a11y"],
+  "plugins": ["react", "react-hooks", "@typescript-eslint"],
   "rules": {
     "no-undef": "error",
     "no-unused-vars": "warn",
