--- a/package.json
+++ b/package.json
@@ -55,15 +55,17 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@next/eslint-plugin-next": "^14.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "daisyui": "^4.12.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "^0.2.4",
     "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8",
+    "sequelize-cli": "^6.6.2",
     "tailwindcss": "^3.4.1"
   }
 }
