--- a/config/config.json
+++ b/config/config.json
@@ -2,22 +2,22 @@
   "development": {
     "username": "root",
     "password": "password",
-    "database": "db",
-    "host": "127.0.0.1",
+    "database": "default",
+    "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "password": "password",
+    "database": "default",
+    "host": "localhost",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "password": "password",
+    "database": "default",
+    "host": "localhost",
     "dialect": "mysql"
   }
 }
