--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@hookform/resolvers": "^3.9.0",
     "@iconify/react": "^5.0.2",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -44,15 +45,17 @@
     "next-themes": "^0.3.0",
     "qrcode.react": "^3.1.0",
     "react": "^18",
+    "react-day-picker": "^9.0.8",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "sequelize": "^6.37.3",
     "sharp": "^0.33.4",
     "swiper": "^11.1.10",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.6",
