--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
     "jose": "^5.6.3",
+    "lottie-react": "^2.4.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "next": "14.2.4",
