--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next": "14.2.4",
     "next-cloudinary": "^6.10.0",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.15",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-day-picker": "^9.0.8",
