--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
+    "resend": "^4.0.0",
     "sequelize": "^6.37.3",
     "sharp": "^0.33.4",
     "swiper": "^11.1.10",
