--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "nodemailer": "^6.9.15",
     "qrcode.react": "^3.1.0",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^9.0.8",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
