--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/components": "0.0.25",
+    "@tiptap/extension-image": "^2.8.0",
+    "@tiptap/extension-table": "^2.8.0",
+    "@tiptap/react": "^2.8.0",
+    "@tiptap/starter-kit": "^2.8.0",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
