--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
+    "firebase": "^10.14.0",
+    "firebase-admin": "^12.6.0",
     "jose": "^5.6.3",
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
