--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "resend": "^4.0.0",
     "sequelize": "^6.37.3",
     "sharp": "^0.33.4",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.1.10",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
