--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "next-cloudinary": "^6.10.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-countup": "^6.5.3",
